--- a/app/src/main/res/layout/fragment_config_list.xml
+++ b/app/src/main/res/layout/fragment_config_list.xml
@@ -12,331 +12,10 @@
         app:layout_constraintBottom_toTopOf="@id/next">
 
         <LinearLayout
+            android:id="@+id/config_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/provider_alias"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_alias"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_alias"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_amazon_cloud_drive"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_amazon_cloud_drive"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_amazon_cloud_drive"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_b2"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_b2"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_b2"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_box"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_box"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_box"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_crypt"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_crypt"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_crypt"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_dropbox"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_dropbox"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_dropbox"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_ftp"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_ftp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_ftp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_http"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_http"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_http"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_hubic"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_hubic"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_hubic"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_onedrive"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_onedrive"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_onedrive"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_pcloud"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_pcloud"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_pcloud"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_sftp"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_sftp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_sftp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_webdav"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_webdav"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_webdav"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/provider_yandex"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:background="?selectableItemBackground" >
-
-                <RadioButton
-                    android:id="@+id/rb_yandex"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="?attr/textColorPrimary"
-                    android:text="@string/provider_yandex"/>
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
